# impedance_analysis

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/: .gitignore  copilot-instructions.md  curr_so.md  old_so.md
.github/instructions/: general-coding.instructions.md  python-stub.instructions.md
docs/: index.md  mkdocs.yml
docs/docs/: index.md
eis_analysis/: __init__.py  __main__.py  generic_env.yml  log.conf  rt_env.yml
eis_analysis/config_management/: __init__.py
eis_analysis/data_analysis/: __init__.py  eval_eis_data.py  import_eis_data.py
eis_analysis/data_treatment/: __init__.py  circuits.py  ckt_analysis.py  complex_data.py  data_analysis.py  data_ops.py  dataset_ops.py  dict_ops.py  value_ops.py  z_array_ops.py
eis_analysis/dc_fit/: __main__.py  column_parsing.py  dc_data_cleaning.py  dc_data_fitting.py  dc_data_post.py  dc_data_processing.py  extract_responses.py  extract_tools.py  fit_functions.py  periodicity_detection.py  permitivity_calculations.py  segment_cleaning.py  segment_fitting.py  settings.json
eis_analysis/dict_ops/: __init__.py  dict_df_ops.py  dict_manipulators.py  dict_ops.py
eis_analysis/equipment/: __init__.py  mfia_base.py  mfia_interface.py  mfia_ops.py  mfia_tk_interface.py  temp_logger.py
impedance_analysis/: __init__.py
research_tools/: JC_env.yml  __init__.py  main_env.yml
src/: recomended_org.md
testing/: circuits.ini  fit_data.py  fit_data_group.py  generators.py  pickle_validation.py  rc_ckt_sim.py  sweep.py  sweep_sequence.py  test_generators.py  v0_test_dict_ops.py
(+133 files in other folders)
