[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eis_analysis"
version = "0.0.1"
description = "Package for operating and reviewing Electrochemical Impedance Analysis"
authors = [
  { name = "JClenney" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10"

[tool.setuptools.packages.find]
where = ["eis_analysis"]

[tool.setuptools.package-data]
"eis_analysis.equipment.temperature_devices" = ["its90nist_allcoeff.json"]

[tool.black]
line-length = 99
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 99
typing-modules = ["eis_analysis.utils._typings"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # E: pycodestyle errors, F: pyflakes, W: warnings, I: isort
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["eis_analysis"]
length-sort = true


[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-line-length = 200

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
    "eis_analysis"
]
